--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.post-editor,
+.post-body {
+	margin: 1em 20%;
+}
+
+.post-editor-button {
+	float: right;
+	margin-top: 1em;
+}
+
+@media (max-width: 900px) {
+	.post-editor {
+		margin: 0;
+	}
+
+	.post-body {
+		margin: 1em;
+	}
 }
